# rag-api

./: .env.example  .gitignore  DEPLOYMENT_SUCCESS.md  FRONTEND_REQUIREMENTS_IMPLEMENTATION_COMPLETE.md  GITHUB_AUTOMATION_COMPLETE.md  README.md  TEST_COVERAGE_REPORT.md  TEST_IMPLEMENTATION_REPORT.md  deploy.py  deploy.sh  deploy_manual.py  deploy_sam.py  docker_sam_deploy.py  pyproject.toml  pytest.ini  requirements.txt  template.yaml
.claude/: settings.local.json
deployment_env/: pyvenv.cfg
docs/: api-docs.html  frontend-implementation-guide.md  frontend-requirements-analysis.md  image-processing-api-specification.yaml  openapi.yaml
sample_data/: made_in_abyss.txt
scripts/: create-issues-and-branches.ps1  git-workflow.ps1  simplified-github-workflow.ps1
src/: __init__.py  image_handlers.py  image_knowledge_manager.py  image_storage_client.py  lambda_handler.py  multi_region_bedrock.py  multi_tenant_handlers.py  multi_tenant_handlers_test.py  ocr_vision_processor.py  requirements.txt  retry_handler.py  s3_vectors_client.py  user_quota_manager.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_validation.py  test_auth_authorization.py  test_cognito_authentication.py  test_edge_cases_performance.py  test_end_to_end_integration.py  test_error_handling.py  test_extended_quota_system.py  test_image_handlers.py  test_image_knowledge_manager.py  test_image_storage_client.py  test_lambda_handler.py  test_lambda_simple.py  test_multi_tenant_integration.py  test_multi_tenant_lambda.py  test_multi_tenant_lambda_updated.py  test_multi_tenant_s3_vectors.py  (+7 more)
(+11 files in other folders)
