[tool.poetry]
name = "rag-api"
version = "0.1.0"
description = "S3 Vectorsを使ったサーバーレスRAGシステム"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
langchain-aws = "^0.1.0"
langchain-text-splitters = "^0.2.0"
xmltodict = "^0.13.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
moto = "^4.2.0"
docker = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
query = "tools.query_example:main"
add-doc = "tools.add_document_example:main"